--- a/manage_system/index.css
+++ b/manage_system/index.css
@@ -3,7 +3,9 @@
 body {
     width:100%;
 	height: 100%;
-    background-image: url(background.jpeg);
+    background-image: url(ok-admin/images/login.jpg)  ;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 
@@ -11,42 +13,70 @@ body {
 
 .my-box {
     width: 100%;
-    margin: 0;
     padding: 0;
     border: 0;
-    display: inline-block;
+    display: inline;
 }
 
 .content {
-    margin-top: 200px;
+    margin-top: 180px;
 }
 
 
 .login {
-    width: 260px;
-    
+    width: 20%;
+    box-shadow: 0 0 50px #6ac2b8;
     padding: 20px;
-    background-color: #1e9fff5e;;
+    background-color: white;
     border-radius: 4px;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -150px 0 0 -150px;
+    left: 60%;
+    top: 35%;
     z-index: 99;
+    
 }
 
-.login h1 {
-    text-align: center;
-    color: #fff;
-    font-size: 24px;
-    margin-bottom: 20px;
+.my-box h1 {
+    color: #6ac2b8;
+    font-size: 60px;
+ 
 }
 
 .layui-form-radio>i:hover, .layui-form-radioed>i {
-    color: #fbfbfb;
+    color: #009688;
+
 }
 
 .layui-form-radio * {
     font-size: 14px;
-    color: white;
+    color: #009688;
+}
+#isAdmin {
+    margin-left: 30%;
+}
+.login_face {
+    margin: -55px auto 20px;
+    width: 100px;
+    height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    overflow: hidden;
+    box-shadow: 0 0 30px #009688;
+}
+.login_face img{
+    width: 100%;
+}
+.mybox_left{
+    float: left;
+    display: inline;
+    position: absolute;
+    left: 20%;
+    top: 37%;
+
+}
+.mybox_right{
+    display: inline;
+    float:left;
 }
